--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -86,6 +86,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:drawableStart="@drawable/email_icon"
+            android:padding="10dp"
             android:ems="10"
             android:drawablePadding="10dp"
             android:hint="@string/email_address"
@@ -99,7 +100,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="32dp"
         app:endIconMode="password_toggle"
         app:errorEnabled="true"
@@ -115,6 +116,7 @@
             android:layout_height="wrap_content"
             android:drawableStart="@drawable/baseline_lock_24_focused"
             android:drawablePadding="10dp"
+            android:padding="10dp"
             android:ems="10"
             android:hint="@string/password"
             android:inputType="textPassword"
