--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.dashboard.ResultActivity">
+    tools:context=".view.main.ui.dashboard.ResultActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
