--- a/app/src/main/res/layout/fragment_profil.xml
+++ b/app/src/main/res/layout/fragment_profil.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.profil.ProfilFragment">
+    tools:context=".view.main.ui.profil.ProfilFragment">
 
     <TextView
         android:layout_width="match_parent"
