--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,25 +7,25 @@
 
     <fragment
         android:id="@+id/navigation_home"
-        android:name="com.dicoding.myapplication1.ui.home.HomeFragment"
+        android:name="com.dicoding.myapplication1.view.main.ui.home.HomeFragment"
         android:label="@string/title_home"
         tools:layout="@layout/fragment_home" />
 
     <fragment
         android:id="@+id/navigation_dashboard"
-        android:name="com.dicoding.myapplication1.ui.dashboard.DashboardFragment"
+        android:name="com.dicoding.myapplication1.view.main.ui.dashboard.DashboardFragment"
         android:label="@string/title_dashboard"
         tools:layout="@layout/fragment_dashboard" />
 
     <fragment
         android:id="@+id/navigation_notifications"
-        android:name="com.dicoding.myapplication1.ui.notifications.NotificationsFragment"
+        android:name="com.dicoding.myapplication1.view.main.ui.notifications.NotificationsFragment"
         android:label="@string/title_notifications"
         tools:layout="@layout/fragment_notifications" />
 
     <fragment
         android:id="@+id/navigation_profil"
-        android:name="com.dicoding.myapplication1.ui.profil.ProfilFragment"
+        android:name="com.dicoding.myapplication1.view.main.ui.profil.ProfilFragment"
         android:label="Profil"
         tools:layout="@layout/fragment_profil"/>
 </navigation>
