--- a/app/src/main/res/layout/activity_create_password.xml
+++ b/app/src/main/res/layout/activity_create_password.xml
@@ -57,7 +57,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:text="@string/confirm_password"
+        android:text="@string/confirm_verify"
         android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/newpasswordEditTextLayout" />
@@ -80,7 +80,7 @@
             android:layout_height="wrap_content"
             android:drawablePadding="10dp"
             android:ems="10"
-            android:hint="@string/confirm_password"
+            android:hint="@string/confirm_kode_verify"
             android:inputType="textEmailAddress"
             tools:ignore="SpeakableTextPresentCheck" />
     </com.google.android.material.textfield.TextInputLayout>
