--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -14,7 +14,7 @@
         tools:src="@tools:sample/avatars"/>
 
     <TextView
-        android:id="@+id/tvpost"
+        android:id="@+id/tvname"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
@@ -22,12 +22,20 @@
         app:layout_constraintTop_toBottomOf="@id/ivItem" />
 
     <TextView
+        android:id="@+id/tvtitle"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvname" />
+
+    <TextView
         android:id="@+id/tvdescription"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvpost" />
+        app:layout_constraintTop_toBottomOf="@id/tvtitle" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cv_item_note"
