--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -35,7 +35,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
         android:layout_marginTop="24dp"
-        android:text="@string/masuk"
+        android:text="Login"
         android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="@id/daftarTextView"
@@ -57,7 +57,7 @@
         android:id="@+id/nameEditTextLayout"
         style="@style/CustomTextInputLayout"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:layout_marginTop="50dp"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
@@ -69,7 +69,7 @@
             android:id="@+id/nameEditText"
             style="@style/CustomTextInputEditText"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:drawableStart="@drawable/baseline_person_24"
             android:drawablePadding="10dp"
             android:padding="10dp"
@@ -83,7 +83,7 @@
         android:id="@+id/emaileditTextLayout"
         style="@style/CustomTextInputLayout"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:layout_marginTop="20dp"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
@@ -95,7 +95,7 @@
             android:id="@+id/emailEditText"
             style="@style/CustomTextInputEditText"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:padding="10dp"
             android:drawablePadding="10dp"
             android:drawableStart="@drawable/email_icon"
@@ -109,7 +109,7 @@
         android:id="@+id/passwordeditTextLayout"
         style="@style/CustomTextInputLayout"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:layout_marginTop="20dp"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
@@ -123,7 +123,7 @@
             android:id="@+id/passwordEditText"
             style="@style/CustomTextInputEditText"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:drawablePadding="10dp"
             android:drawableStart="@drawable/baseline_lock_24"
             android:padding="10dp"
@@ -135,7 +135,7 @@
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/signupButton"
         android:layout_width="0dp"
-        android:layout_height="64dp"
+        android:layout_height="60dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
