--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,7 @@
     <color name="pink_500">#D81B60</color>
     <color name="pink_200">#FF8FAF</color>
     <color name="ijo">#227D3F</color>
+    <color name="ijo_muda">#816DD18D</color>
     <color name="grey">#787C78</color>
     <color name="back_ground">#eaeaea</color>
 
