--- a/app/src/main/res/layout/activity_create_password.xml
+++ b/app/src/main/res/layout/activity_create_password.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/background"
     tools:context=".view.forgot.CreatePasswordActivity">
 
     <ProgressBar
@@ -17,33 +18,75 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:visibility="visible" />
 
+    <LinearLayout
+        android:id="@+id/linearNewPassword"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:padding="10dp"
+        android:gravity="center_horizontal"
+        app:layout_constraintTop_toTopOf="parent">
+        <ImageView
+            android:id="@+id/new_password_btn"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_marginStart="10dp"
+            android:src="@drawable/baseline_arrow_back_ios_new_24"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:textColor="@color/black"
+            android:text="@string/new_password"/>
+    </LinearLayout>
+
+    <ImageView
+        android:id="@+id/new_password_icon"
+        android:layout_width="280dp"
+        android:layout_height="280dp"
+        android:src="@drawable/forgot_password"
+        android:layout_marginTop="60dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/linearNewPassword"/>
 
     <TextView
-        android:id="@+id/newpasswordTextView"
-        android:layout_width="wrap_content"
+        android:id="@+id/newPasswordTextView"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:text="@string/new_password"
-        android:textColor="@color/black"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:text="@string/new_password_textView"
+        android:textStyle="bold"
+        android:gravity="center"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="12dp"
+        android:layout_marginStart="12dp"
+        android:textSize="20sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/new_password_icon"/>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/newpasswordEditTextLayout"
+        android:id="@+id/newPasswordEditTextLayout"
         style="@style/CustomTextInputLayout"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="32dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginEnd="25dp"
+        android:layout_marginTop="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/newpasswordTextView">
+        app:layout_constraintTop_toBottomOf="@id/newPasswordTextView">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/newEditText"
             style="@style/CustomTextInputEditText"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:drawablePadding="10dp"
             android:ems="10"
             android:hint="@string/new_password"
@@ -52,32 +95,23 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
-    <TextView
-        android:id="@+id/confirmpasswordTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:text="@string/confirm_verify"
-        android:textColor="@color/black"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/newpasswordEditTextLayout" />
-
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/confirmpasswordEditTextLayout"
+        android:id="@+id/confirmPasswordEditTextLayout"
         style="@style/CustomTextInputLayout"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="32dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginEnd="25dp"
+        android:layout_marginTop="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/confirmpasswordTextView">
+        app:layout_constraintTop_toBottomOf="@id/newPasswordEditTextLayout">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/confrimEditText"
             style="@style/CustomTextInputEditText"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:drawablePadding="10dp"
             android:ems="10"
             android:hint="@string/confirm_kode_verify"
@@ -88,15 +122,13 @@
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/saveButton"
         android:layout_width="0dp"
-        android:layout_height="64dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="32dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
         android:text="@string/save"
         android:background="@drawable/button_bg"
         android:textColor="@color/back_ground"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/confirmpasswordEditTextLayout" />
+        app:layout_constraintLeft_toLeftOf="@+id/confirmPasswordEditTextLayout"
+        app:layout_constraintRight_toRightOf="@+id/confirmPasswordEditTextLayout"
+        app:layout_constraintTop_toBottomOf="@id/confirmPasswordEditTextLayout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
