--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/background"
     tools:context=".view.forgot.ForgotPasswordActivity">
 
     <ProgressBar
@@ -17,6 +18,43 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:visibility="visible" />
 
+    <LinearLayout
+        android:id="@+id/linearForgetPassword"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:padding="10dp"
+        android:gravity="center_horizontal"
+        app:layout_constraintTop_toTopOf="parent">
+        <ImageView
+            android:id="@+id/back_forget_password_btn"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_marginStart="10dp"
+            android:src="@drawable/baseline_arrow_back_ios_new_24"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:textColor="@color/black"
+            android:text="Forgot Password"/>
+
+    </LinearLayout>
+
+    <ImageView
+        android:id="@+id/forgot_password_icon"
+        android:layout_width="280dp"
+        android:layout_height="280dp"
+        android:src="@drawable/forgot_password"
+        android:layout_marginTop="60dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/linearForgetPassword"/>
+
     <TextView
         android:id="@+id/resetpasswordTextView"
         android:layout_width="match_parent"
@@ -24,18 +62,22 @@
         android:layout_marginTop="50dp"
         android:layout_marginEnd="12dp"
         android:layout_marginStart="12dp"
+        android:textColor="@color/black"
         android:text="@string/text_reset"
-        app:layout_constraintTop_toTopOf="parent"
+        android:textStyle="bold"
+        android:gravity="center"
+        android:textSize="20sp"
+        app:layout_constraintTop_toBottomOf="@id/forgot_password_icon"
         app:layout_constraintStart_toStartOf="parent"/>
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/emailEditTextLayout"
         style="@style/CustomTextInputLayout"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:layout_marginEnd="12dp"
-        android:layout_marginTop="16dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginEnd="25dp"
+        android:layout_marginTop="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/resetpasswordTextView">
@@ -44,7 +86,7 @@
             android:id="@+id/emailEditText"
             style="@style/CustomTextInputEditText"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:drawableStart="@drawable/email_icon"
             android:ems="10"
             android:hint="@string/email_address"
@@ -54,16 +96,14 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/sendButton"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="12dp"
-        android:text="@string/send"
+        android:layout_marginTop="36dp"
         android:background="@drawable/button_bg"
+        android:text="@string/send"
         android:textColor="@color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintRight_toRightOf="@id/emailEditTextLayout"
+        app:layout_constraintLeft_toLeftOf="@id/emailEditTextLayout"
         app:layout_constraintTop_toBottomOf="@id/emailEditTextLayout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
