--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -55,6 +55,16 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/linearForgetPassword"/>
 
+    <ImageView
+        android:id="@+id/forgot_password"
+        android:layout_width="280dp"
+        android:layout_height="280dp"
+        android:src="@drawable/forgot"
+        android:layout_marginTop="60dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/linearForgetPassword"/>
+
     <TextView
         android:id="@+id/resetpasswordTextView"
         android:layout_width="match_parent"
