--- a/app/src/main/res/layout/activity_verif.xml
+++ b/app/src/main/res/layout/activity_verif.xml
@@ -17,6 +17,68 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:visibility="visible" />
 
+    <LinearLayout
+        android:id="@+id/linearVerifyPassword"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:padding="10dp"
+        android:gravity="center_horizontal"
+        app:layout_constraintTop_toTopOf="parent">
+        <ImageView
+            android:id="@+id/back_verify_password_btn"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_marginStart="10dp"
+            android:src="@drawable/baseline_arrow_back_ios_new_24"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:textColor="@color/black"
+            android:text="Verify Password"/>
+
+    </LinearLayout>
+
+    <ImageView
+        android:id="@+id/verify_password_icon"
+        android:layout_width="280dp"
+        android:layout_height="280dp"
+        android:src="@drawable/forgot_password"
+        android:layout_marginTop="60dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/linearVerifyPassword"/>
+
+    <ImageView
+        android:id="@+id/verify_password"
+        android:layout_width="280dp"
+        android:layout_height="280dp"
+        android:src="@drawable/forgot"
+        android:layout_marginTop="60dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/linearVerifyPassword"/>
+
+    <TextView
+        android:id="@+id/verifypasswordTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="12dp"
+        android:layout_marginStart="12dp"
+        android:textColor="@color/black"
+        android:text="@string/text_reset"
+        android:textStyle="bold"
+        android:gravity="center"
+        android:textSize="20sp"
+        app:layout_constraintTop_toBottomOf="@id/verify_password_icon"
+        app:layout_constraintStart_toStartOf="parent"/>
+
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/verifyEditTextLayout"
         style="@style/CustomTextInputLayout"
@@ -26,6 +88,7 @@
         android:layout_marginEnd="12dp"
         android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/verifypasswordTextView"
         app:layout_constraintStart_toStartOf="parent">
 
         <com.google.android.material.textfield.TextInputEditText
