Finising slide layout

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -57,13 +57,13 @@
 
     <ImageView
         android:id="@+id/forgot_password"
-        android:layout_width="280dp"
-        android:layout_height="280dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:src="@drawable/forgot"
-        android:layout_marginTop="60dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/linearForgetPassword"/>
+        app:layout_constraintBottom_toBottomOf="@id/forgot_password_icon"
+        app:layout_constraintLeft_toLeftOf="@id/forgot_password_icon"
+        app:layout_constraintRight_toRightOf="@id/forgot_password_icon"
+        app:layout_constraintTop_toTopOf="@id/forgot_password_icon" />
 
     <TextView
         android:id="@+id/resetpasswordTextView"
@@ -99,6 +99,7 @@
             android:layout_height="match_parent"
             android:drawableStart="@drawable/email_icon"
             android:ems="10"
+            android:drawablePadding="10dp"
             android:hint="@string/email_address"
             android:inputType="textEmailAddress"
             tools:ignore="SpeakableTextPresentCheck" />
