--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -16,7 +16,7 @@
         <androidx.appcompat.widget.AppCompatImageView
             android:layout_width="250dp"
             android:layout_height="250dp"
-            app:srcCompat="@drawable/label"
+            app:srcCompat="@drawable/recratify"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
