--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -26,8 +26,14 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginStart="15dp"
                 android:textStyle="bold"
-                android:textSize="30sp"
-                />
+                android:textSize="30sp" />
+
+            <ImageView
+                android:id="@+id/ivItem"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                tools:src="@tools:sample/avatars"/>
 
             <TextView
                 android:id="@+id/tvname"
@@ -37,12 +43,6 @@
                 android:layout_marginStart="15dp"
                 android:textSize="20sp"
                 tools:text = "userName" />
-            <ImageView
-                android:id="@+id/ivItem"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                tools:src="@tools:sample/avatars"/>
 
             <TextView
                 android:id="@+id/tvdescription"
