--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -36,32 +36,36 @@
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/picture_1" />
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/galleryButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
             android:text="@string/gallery"
+            android:background="@drawable/button_bg"
+            android:textColor="@color/back_ground"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/cameraButton"
+            app:layout_constraintStart_toEndOf="@id/cameraButton"
             app:layout_constraintTop_toBottomOf="@id/previewImageView" />
 
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/cameraButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:elevation="2dp"
-            android:scaleType="fitCenter"
+            android:layout_marginTop="8dp"
             android:text="@string/camera"
-            app:layout_constraintEnd_toStartOf="@+id/galleryButton"
+            android:background="@drawable/button_bg"
+            android:textColor="@color/back_ground"
+            app:layout_constraintEnd_toStartOf="@id/galleryButton"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/previewImageView" />
+
 
         <EditText
             android:id="@+id/EditTexttitle"
@@ -93,7 +97,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/EditTexttitle" />
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/uploadButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -101,6 +105,8 @@
             android:layout_marginEnd="8dp"
             android:layout_marginTop="16dp"
             android:text="@string/upload"
+            android:background="@drawable/button_bg"
+            android:textColor="@color/back_ground"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/EditTextdescription" />
