--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -21,7 +21,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/picture_1" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/cameraButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -29,13 +29,14 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:text="@string/camera"
+        android:background="@drawable/button_bg"
+        android:textColor="@color/back_ground"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/galleryButton"
+        app:layout_constraintStart_toEndOf="@id/galleryButton"
         app:layout_constraintTop_toBottomOf="@id/previewImageView" />
 
-
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/galleryButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -43,19 +44,24 @@
         android:elevation="2dp"
         android:scaleType="fitCenter"
         android:text="@string/gallery"
-        app:layout_constraintEnd_toStartOf="@+id/cameraButton"
+        android:background="@drawable/button_bg"
+        android:textColor="@color/back_ground"
+        app:layout_constraintEnd_toStartOf="@id/cameraButton"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/previewImageView" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/analyzeButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="3dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:text="@string/analyze"
+        android:background="@drawable/button_bg"
+        android:textColor="@color/back_ground"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
