--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -51,8 +51,7 @@
                 android:layout_marginStart="15dp"
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
-                tools:text="Description"
-                />
+                tools:text="Description" />
 
         </LinearLayout>
 
